exercises/ping-pong-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-application-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-application
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
